--- a/static/css/theme-hm.css
+++ b/static/css/theme-hm.css
@@ -3,25 +3,25 @@
 
     --MAIN-TEXT-color:#323232; /* Color of text by default */
     --MAIN-TITLES-TEXT-color: #5e5e5e; /* Color of titles h2-h3-h4-h5 */
-    --MAIN-LINK-color:#1C90F3; /* Color of links */
+    --MAIN-LINK-color:#5DC7D1; /* Color of links */
     --MAIN-LINK-HOVER-color:#167ad0; /* Color of hovered links */
     --MAIN-ANCHOR-color: #1C90F3; /* color of anchors on titles */
 
     --MENU-HEADER-BG-color:#FFFFFF; /* Background color of menu header */
-    --MENU-HEADER-BORDER-color:#a1d2fd; /*Color of menu header border */
+    --MENU-HEADER-BORDER-color:#113753; /*Color of menu header border */
 
     --MENU-SEARCH-BG-color:#FFFFFF; /* Search field background color (by default borders + icons) */
-    --MENU-SEARCH-BOX-color: #555555; /* Override search field border color */
-    --MENU-SEARCH-BOX-ICONS-color: #a1d2fd; /* Override search field icons color */
+    --MENU-SEARCH-BOX-color: #EEEEEE; /* Override search field border color */
+    --MENU-SEARCH-BOX-ICONS-color: #c1f2fd; /* Override search field icons color */
 
     --MENU-SECTIONS-ACTIVE-BG-color:#20272b; /* Background color of the active section and its childs */
-    --MENU-SECTIONS-BG-color:#252c31; /* Background color of other sections */
+    --MENU-SECTIONS-BG-color:#214763; /* Background color of other sections */
     --MENU-SECTIONS-LINK-color: #ccc; /* Color of links in menu */
     --MENU-SECTIONS-LINK-HOVER-color: #e6e6e6;  /* Color of links in menu, when hovered */
     --MENU-SECTION-ACTIVE-CATEGORY-color: #777; /* Color of active category text */
     --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #fff; /* Color of background for the active category (only) */
 
-    --MENU-VISITED-color: #33a1ff; /* Color of 'page visited' icons in menu */
+    --MENU-VISITED-color: #11A8AD; /* Color of 'page visited' icons in menu */
     --MENU-SECTION-HR-color: #20272b; /* Color of <hr> separator in menu */
 
 }
@@ -101,3 +101,29 @@ a:hover {
 #sidebar hr {
     border-color: var(--MENU-SECTION-HR-color);
 }
+
+@media print {
+  #sidebar, #navigation, #top-bar, .anchor, #sidebar-toggle-span, .copy-to-clipboard {
+    display: none; }
+
+  #navigation * {
+    display: none;
+    visibility: hidden; }
+
+  #body-inner {
+    margin-bottom: 0px; }
+
+  #footer, .footline {
+    margin-top: 1px; }
+
+  body, a {
+    font-size: 120%;
+    color: black !important;
+    background: white !important; }
+
+  h1, h2, h3, h4, h5, h6 {
+    color: black !important;
+    background: white !important; }
+
+  #body {
+    margin-left: 0px; } }
